--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,4 +2,4 @@ plugins:
   - jekyll-remote-theme
 remote_theme: chromatical/jekyll-materialdocs
 title: cv4sensorhub
-mdl_colors: indigo-amber
+mdl_colors: indigo-deep_orange
