--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
 plugins:
   - jekyll-remote-theme
 remote_theme: chromatical/jekyll-materialdocs
-title: {{site.baseurl}}/assets/cv4s_logo.png
+title: <img href="{{site.baseurl}}/assets/cv4s_logo.png"/>
 mdl_colors: indigo-deep_orange
